psd to html code

--- a/forgotpass.html
+++ b/forgotpass.html
@@ -82,10 +82,10 @@
                     <p class="text-align-center">Enter your email address you've using for your account below and we
                         will send you a password reset link</p>
                 </div>
-                <p class="email-txt mt-4">
-                    Email Address
-                </p>
-                <input type="text" placeholder=" Enter your email address..." class="pass-box">
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label email-txt">Email address</label>
+                    <input type="email" class="form-control pass-box" id="exampleFormControlInput1" placeholder="name@example.com">
+                  </div>
 
                 <button class="btn-login">Reset my Password </button>
                 <p class="lost mt-4"><a href="index.html" class="anchor"> Login </a></p>
