--- a/register.html
+++ b/register.html
@@ -16,10 +16,10 @@
 
         <div id="carouselCaptions" class="carousel slide col-lg-8 col-md-12 col-sm-12" data-bs-ride="carousel">
             <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="0" class="active indicator" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="1" aria-label="Slide 2" class="indicator"></button>
+                <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="2" aria-label="Slide 3" class="indicator"></button>
+                <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="3" aria-label="Slide 4" class="indicator"></button>
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -91,7 +91,7 @@
 
                 <button class="btn-login">Register</button>
                 <p class="lost mt-4"><a href="forgotpass.html" class="anchor">Lost your password?</a></p>
-                <p class="new-acc">Already Registered?<span> <a href="login.html">Login now</a></span></p>
+                <p class="new-acc">Already Registered?<span> <a href="index.html" class="anchor-blue">Login now</a></span></p>
             </div>
             <div class="policy">
                 Privacy Policy
