--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="images/Grow-Trees-On-the-path-to-environment-sustainability-login.png"
+                    <img src="./images/Grow-Trees-On-the-path-to-environment-sustainability-login.png"
                         class="d-block w-100 left-img" alt="Image1">
                     <div class="carousel-caption d-none d-md-block">
                         <h3>Sed ut perspiciatis unde omnis iste natus voluptatem.</h5>
@@ -33,14 +33,14 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/Grow-Trees-On-the-path-to-environment-sustainability-login.png" class="d-block w-100 left-img" alt="Image2">
+                    <img src="./images/Grow-Trees-On-the-path-to-environment-sustainability-login.png" class="d-block w-100 left-img" alt="Image2">
                     <div class="carousel-caption d-md-block">
                         <h3>Sed ut perspiciatis unde omnis iste natus voluptatem.</h5>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis eos provident fuga vel non, esse quod, officia quo nam culpa nesciunt laborum, omnis eveniet natus nisi aperiam autem tenetur possimus!</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/Grow-Trees-On-the-path-to-environment-sustainability-login.png"
+                    <img src="./images/Grow-Trees-On-the-path-to-environment-sustainability-login.png"
                         class="d-block w-100 left-img" alt="Image3">
                     <div class="carousel-caption d-md-block">
                         <h3>Sed ut perspiciatis unde omnis iste natus voluptatem.</h5>
@@ -48,7 +48,7 @@
                     </div>
                 </div>
                     <div class="carousel-item">
-                        <img src="/images/Grow-Trees-On-the-path-to-environment-sustainability-login.png"
+                        <img src="./images/Grow-Trees-On-the-path-to-environment-sustainability-login.png"
                             class="d-block w-100 left-img" alt="Image4">
                         <div class="carousel-caption d-md-block">
                             <h3>Sed ut perspiciatis unde omnis iste natus voluptatem.</h5>
