--- a/newpass.html
+++ b/newpass.html
@@ -27,7 +27,7 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="images/Grow-Trees-On-the-path-to-environment-sustainability-login.png"
+                    <img src="./images/Grow-Trees-On-the-path-to-environment-sustainability-login.png"
                         class="d-block w-100 left-img" alt="Image1">
                     <div class="carousel-caption d-md-block">
                         <h3>Sed ut perspiciatis unde omnis iste natus voluptatem.</h5>
@@ -38,7 +38,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/Grow-Trees-On-the-path-to-environment-sustainability-login.png"
+                    <img src="./images/Grow-Trees-On-the-path-to-environment-sustainability-login.png"
                         class="d-block w-100 left-img" alt="Image2">
                     <div class="carousel-caption d-md-block ">
                         <h3>Sed ut perspiciatis unde omnis iste natus voluptatem.</h5>
@@ -48,7 +48,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/Grow-Trees-On-the-path-to-environment-sustainability-login.png"
+                    <img src="./images/Grow-Trees-On-the-path-to-environment-sustainability-login.png"
                         class="d-block w-100 left-img" alt="Image3">
                     <div class="carousel-caption d-md-block">
                         <h3>Sed ut perspiciatis unde omnis iste natus voluptatem.</h5>
@@ -58,7 +58,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/Grow-Trees-On-the-path-to-environment-sustainability-login.png"
+                    <img src="./images/Grow-Trees-On-the-path-to-environment-sustainability-login.png"
                         class="d-block w-100 left-img" alt="Image3">
                     <div class="carousel-caption d-md-block">
                         <h3>Sed ut perspiciatis unde omnis iste natus voluptatem.</h5>
